# notion-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  cabal.project  flake.nix  mori.dhall  notion-client.cabal  test-page-creation.json
.seihou/: manifest.json
docs/plans/: 2-close-api-gaps.md  3-fix-comment-attachment-parsing.md  4-fix-native-icon-decode.md  add-file-upload-support.md  complete-2026-03-11-upgrade.md  complete-api-coverage.md  first-class-database-datasource-support.md  nested-block-children.md  typed-block-content.md  typed-database-datasource-support.md
mori/: repo-id
notion-client-effectful/: CHANGELOG.md  LICENSE  README.md  notion-client-effectful.cabal
notion-client-effectful/src/Notion/V1/: Effectful.hs
notion-client-effectful/src/Notion/V1/Effectful/: Effect.hs  Interpreter.hs
notion-client-example/: BlockDemo.hs  Blocks.hs  Console.hs  CustomEmojiDemo.hs  DatabaseDemo.hs  FileUploadDemo.hs  Main.hs  MarkdownDemo.hs  PageDemo.hs  TemplateDemo.hs  UserDemo.hs  ViewDemo.hs
src/Notion/: Prelude.hs  V1.hs
src/Notion/V1/: BlockContent.hs  Blocks.hs  Comments.hs  Common.hs  CustomEmojis.hs  DataSources.hs  Databases.hs  Error.hs  FileUploads.hs  Filter.hs  ListOf.hs  Pages.hs  Pagination.hs  Properties.hs  PropertyValue.hs  RichText.hs  Search.hs  Users.hs  Views.hs  Webhooks.hs
tasty/: Main.hs
