cabal-version:      3.4
name:               notion-client
version:            0.1.0
synopsis:           Type-safe Haskell client for the Notion API
description:
  This package provides comprehensive and type-safe bindings
  to the Notion API, providing both a Servant interface and
  non-Servant interface for convenience.
  .
  Read the @README@ below for a fully worked usage example.
  .
  Otherwise, browse the "Notion.V1" module, which is the
  intended package entrypoint.

license:            MIT
license-file:       LICENSE
category:           Web
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
homepage:           https://github.com/shinzui/notion-client
bug-reports:        https://github.com/shinzui/notion-client/issues
build-type:         Simple
tested-with:        GHC ==9.12.2
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files: LICENSE

source-repository head
  type:     git
  location: https://github.com/shinzui/notion-client.git

library
  default-language:   GHC2024
  hs-source-dirs:     src
  build-depends:
    , aeson                     >=2.2      && <2.3
    , base                      >=4.15.0.0 && <5
    , base16-bytestring         >=1.0      && <1.1
    , bytestring                >=0.11     && <0.13
    , containers                >=0.6      && <0.8
    , cryptohash-sha256         >=0.11     && <0.12
    , filepath                  >=1.4      && <1.6
    , http-api-data             >=0.6      && <0.7
    , http-client-tls           >=0.3      && <0.4
    , servant                   >=0.20     && <0.21
    , servant-client            >=0.20     && <0.21
    , servant-multipart-api     >=0.12     && <0.13
    , servant-multipart-client  >=0.12     && <0.13
    , text                      >=2.0      && <2.2
    , time                      >=1.11     && <1.15
    , time-compat               >=1.9      && <1.10
    , unordered-containers      >=0.2      && <0.3
    , vector                    >=0.13     && <0.14

  exposed-modules:
    Notion.V1
    Notion.V1.Blocks
    Notion.V1.Comments
    Notion.V1.Common
    Notion.V1.Databases
    Notion.V1.DataSources
    Notion.V1.Error
    Notion.V1.ListOf
    Notion.V1.Pages
    Notion.V1.Pagination
    Notion.V1.RichText
    Notion.V1.Search
    Notion.V1.Users
    Notion.V1.Webhooks

  other-modules:      Notion.Prelude
  default-extensions:
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

  ghc-options:        -Wall

test-suite tasty
  default-language:   GHC2024
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tasty
  main-is:            Main.hs
  default-extensions:
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

  build-depends:
    , aeson
    , base
    , http-client
    , http-client-tls
    , notion-client
    , servant-client
    , tasty
    , tasty-hunit
    , text

  ghc-options:        -Wall

executable notion-client-example
  default-language:   GHC2024
  hs-source-dirs:     notion-client-example
  main-is:            Main.hs
  other-modules:
    Blocks
    Console
    DatabaseDemo
    PageDemo
    UserDemo

  default-extensions:
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

  build-depends:
    , aeson
    , base
    , containers
    , notion-client
    , text
    , unordered-containers
    , vector

  ghc-options:        -Wall
