cabal-version:   3.4
name:            notion-client-effectful
version:         0.1.0.0
synopsis:        Effectful effects for notion-client
description:
  Effectful effect + default interpreter for shinzui/notion-client.
  Exposes every operation on 'Notion.V1.Methods' as a smart
  constructor of the 'Notion.V1.Effectful.Notion' effect and provides
  a 'runNotion' interpreter that dispatches through a concrete
  @Methods@ value. API-level 'Notion.V1.Error.NotionError' responses
  are surfaced via the @Error NotionError@ effect; other
  @Servant.Client.ClientError@ values remain 'IO' exceptions.
  See @README.md@ for the full import pattern and a worked example.

license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
category:        Web
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:             warnings
  exposed-modules:
    Notion.V1.Effectful
    Notion.V1.Effectful.Effect
    Notion.V1.Effectful.Interpreter

  default-extensions:
    DataKinds
    DuplicateRecordFields
    GADTs
    LambdaCase
    OverloadedStrings
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson           >=2.2  && <2.3
    , base            >=4.18 && <5
    , effectful-core  >=2.5  && <3
    , notion-client   >=0.7  && <0.8
    , text            >=2.0  && <2.2

  hs-source-dirs:     src
  default-language:   GHC2024
